updated api version to 1.0.2
