# server/api/src/openapi_server/controllers/resource_controller.py
@@ -4,6 +4,7 @@ import six
 import uuid
 import datetime
 
+from openapi_server.models.inline_object import InlineObject  # noqa: E501
 from openapi_server.models.resource import Resource  # noqa: E501
 from openapi_server.models.training import Training  # noqa: E501
 from openapi_server.models.resource_status import ResourceStatus
@@ -21,7 +22,7 @@ from mapper import mapper
 
 TEMP_UPLOAD_FOLDER = '/tmp/fileupload'
 
-def assign_resource_to_training(project_uuid, training_version, resource_uuid):  # noqa: E501
+def assign_resource_to_training(project_uuid, training_version, inline_object=None):  # noqa: E501
     """Assign a resource to the training
 
     Assign the specified resource to the training # noqa: E501
@@ -30,11 +31,13 @@ def assign_resource_to_training(project_uuid, training_version, resource_uuid): 
     :type project_uuid: 
     :param training_version: Training version of the project
     :type training_version: int
-    :param resource_uuid: UUID of the resource
-    :type resource_uuid: 
+    :param inline_object: 
+    :type inline_object: dict | bytes
 
     :rtype: Resource
     """
+    if connexion.request.is_json:
+        inline_object = InlineObject.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 def get_filetype(filename):
